[package]
name = "badapple"
version = "1.2.0"
edition = "2021"

[profile.dev]
opt-level = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29.10"
softbuffer = "0.4.1"
ffmpeg-next = "7.0.0"
cpal = "0.15.3"
ringbuf = "0.2.6"
